Refined review screen and added intro screen

--- a/server/public/stylesheets/dvsa.css
+++ b/server/public/stylesheets/dvsa.css
@@ -7115,6 +7115,7 @@ strong {
 }
 .c-transaction-details {
 	width: 100%;
+	color: #fff;
 	border-top-width: 1px;
 	border-top-style: solid;
 	border-top-color: #fff;
