Added camera recording badges

--- a/server/views/layout.njk
+++ b/server/views/layout.njk
@@ -6,6 +6,8 @@
 	<link href="stylesheets/govuk-template-print.css?0.22.1" media="print" rel="stylesheet">
 	<link href="stylesheets/govuk-elements-styles.css?0.22.1" media="screen" rel="stylesheet">
 	<link href="stylesheets/dvsa.css?0.22.1" media="screen" rel="stylesheet">
+	<link href="stylesheets/vendor/font-awesome.min.css"  media="screen" rel="stylesheet"/>
+
 
 
 	<link href="stylesheets/fonts.css?0.22.1" media="all" rel="stylesheet">
@@ -27,6 +29,8 @@
 		src="https://code.jquery.com/jquery-3.2.1.min.js"
 		integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 		crossorigin="anonymous"></script>
+
+	<script src="https://cdn.rawgit.com/leafo/sticky-kit/v1.1.2/jquery.sticky-kit.min.js"></script>
 
 </head>
 
@@ -112,7 +116,6 @@
 <script src="app/vendor.js"></script>
 <script src="app/frontend.js"></script>
 <script src="app/app.js"></script>
-
 
 
 
