Fixed issue with face.js

--- a/server/views/layout.njk
+++ b/server/views/layout.njk
@@ -114,6 +114,7 @@
 
 <script src="javascripts/govuk-template.js?0.22.1"></script>
 <script src="app/vendor.js"></script>
+<script src="app/tracking.js"></script>
 <script src="app/frontend.js"></script>
 <script src="app/app.js"></script>
 
