Example brf setup on intro page

--- a/server/views/layout.njk
+++ b/server/views/layout.njk
@@ -117,6 +117,7 @@
 <script src="app/tracking.js"></script>
 <script src="app/frontend.js"></script>
 <script src="app/app.js"></script>
+<script src="javascripts/BRFv4_JS_trial.js"></script>
 
 
 
